[workspace]
members = [
	"handler",
	"router",
	"model",
	"service",
	"io_hub",
	"app",
	"query",
	"state",
	"client",
	"configure",
	"error",
]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.193", features = ["derive"] }
chrono = { version = "0.4.31", features = ["clock", "serde"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = [
	"postgres",
	"chrono",
	"macros",
	"runtime-tokio-rustls",
] }
config = "0.13.4"
deadpool-lapin = "0.11.0"
lapin = "2.3.1"
