[package]
name = "client"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-trait = "0.1.75"

deadpool-lapin = { workspace = true }
lapin = { workspace = true }
sqlx = { workspace = true }

configure = { path = "../configure" }
error = { path = "../error" }
