[package]
name = "configure"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
project-root = "0.2.2"
once_cell = "1.19.0"
