[package]
name = "service"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io_hub = { path = "../io_hub" }
query = { path = "../query" }
state = { path = "../state" }
actix-web = { workspace = true }
sqlx = { workspace = true }
